# cli

./: .env.development  .env.production  .eslintrc.json  .gitignore  .prettierignore  README.md  esbuild.mjs  eslint.config.mjs  juno.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: checks.yml  next.yml  publish.yml  tests-screenshots.yml  tests.yml
e2e/: create-website.spec.ts  snapshots.spec.ts
e2e/constants/: test-ids.constants.ts
e2e/page-objects/: cli.page.ts  console.page.ts  identity.page.ts  satellite.page.ts
e2e/utils/: init.utils.ts
scripts/: esbuild.mjs  install-next  prepublish.sh  publish-npm-next.sh  update-version.mjs
src/: env.identity.ts  env.token.ts  env.ts  index.ts  version.ts
src/api/: actor.api.ts  agent.api.ts  ic.api.ts
src/cli/: env.loader.ts
src/commands/: auth.ts  backup.ts  changes.ts  clear.ts  config.ts  deploy.ts  dev.ts  emulator.ts  functions.ts  help.ts  hosting.ts  init.ts  links.ts  open.ts  run.ts  snapshot.ts  start-stop.ts  start.ts  status.ts  stop.ts  storage.ts  upgrade.ts  use.ts  version.ts  whoami.ts
src/configs/: auth.config.ts  cli.config.ts  cli.settings.config.ts  cli.state.config.ts  cli.versions.config.ts  dapp.config.ts  emulator.config.ts  juno.config.ts  juno.dev.config.ts  node.utils.ts  satellite.config.ts
src/constants/: build.constants.ts  config.constants.ts  constants.ts  deploy.constants.ts  (+7 more)
templates/: failure.html  success.html
templates/eject/src/satellite/: Cargo.toml  satellite.did
templates/eject/src/satellite/src/: lib.rs
(+279 files in other folders)
