[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.17.0"
ic-cdk-macros = "0.17.0"
serde = "1.0.190"
serde_cbor = "0.11.2"
junobuild-satellite = "= 0.0.21-patch.1"
junobuild-macros = "0.0.3"
junobuild-utils = "0.0.4"

